# sparse-matrix-tool

./: .gitignore  CMakeLists.txt  README.md  assets.qrc  creatematrix.cpp  creatematrix.h  creatematrix.ui  error.cpp  error.ui  explorer.cpp  explorer.h  explorer.ui  inmatrix.cpp  inmatrix.h  inmatrix.ui  io.cpp  io.h  main.cpp  main.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  mainwindow.ui.autosave  matrix-calc.pro  operations.cpp  operations.h  shared.h  sparsematrixmodel.cpp  sparsematrixmodel.h  untitled.pro  util.cpp  util.h  warring.cpp  warring.h  warring.ui
examples/: ex0.txt  ex1.txt
headers/: creatematrix.h  details.h  error.h  explorer.h  inmatrix.h  mainwindow.h  matrixitem.h  preview.h  sparsematrixmodel.h  warring.h
src/: creatematrix.cpp  details.cpp  error.cpp  explorer.cpp  exporer.cpp  inmatrix.cpp  main.cpp  mainwindow.cpp  matrixitem.cpp  preview.cpp  sparsematrixmodel.cpp  warring.cpp
ui/: creatematrix.ui  details.ui  error.ui  explorer.ui  inmatrix.ui  mainwindow.ui  matrixitem.ui  preview.ui  warring.ui
